--- a/docassemble/USCISApplications/data/questions/main.yml
+++ b/docassemble/USCISApplications/data/questions/main.yml
@@ -1017,7 +1017,7 @@ code: |
   users[i].tps_legal_screener.enabled = not application_kind == "ead_only"
 ---
 code: |
-  users[i].ead_interim_parole_addendum.enabled = users[i].application_is_approved and (application_kind == "ead_only")
+  users[i].ead_interim_parole_addendum.enabled = users[i].application_is_approved and (application_kind == "ead_only") and users[i].addenda["ead_interim_parole"]
 ---
 attachment:
   variable name: users[i].military_service_addendum[j]
@@ -1078,7 +1078,7 @@ attachment:
   variable name: users[i].tps_legal_screener[j]
   name: ${ users[i] } - TPS Legal Screener
   filename: ${ space_to_underscore(f"{users[i]} - TPS Legal Screener") }
-  docx template file: TPS_legal_screener.docx
+  docx template file: TPS_legal_screener_AID_edited.docx
   skip undefined: True
 ---
 reconsider:
