--- a/docassemble/USCISApplications/data/questions/screeners.yml
+++ b/docassemble/USCISApplications/data/questions/screeners.yml
@@ -194,11 +194,18 @@ fields:
   - Supervisor notes: supervisor_notes
     required: False
     datatype: area
-  - What addenda should be included?: selected_addenda
-    datatype: checkboxes
-    choices:
-      - EAD interim parole: ead_interim_parole
-        default: True
+  - code: |
+      [
+        {
+          "label": f"What addenda should be included for {user}?", 
+          "field": user.attr_name("addenda"),
+          "datatype": "checkboxes",
+          "choices": [
+            {"EAD interim parole": "ead_interim_parole"},
+          ],
+        }
+        for user in users
+      ]
 ---
 id: tps_screening_questions
 continue button field: users[i].tps_screening_questions
@@ -370,14 +377,14 @@ fields:
     default: |
       ${ showifdef("users[0].method_of_entry") if i > 0 else '' }
   - Who entered the US with you?: users[i].who_entered_with_user
-    datatype: radio
+    datatype: checkboxes
     choices:
       - Spouse: spouse
-      - Children, with or without spouse: children
+      - Child or Children: children
+      - Parent(s): parents
       - Entered alone: entered alone
       - Other or N/A: other or N/A
-    default: |
-      ${ showifdef("users[0].who_entered_with_user") if i > 0 else '' }
+    none of the above: False
   - Did your children enter the US separately from you?: users[i].children_entered_separately
     datatype: yesnoradio
     default: |
@@ -387,11 +394,11 @@ fields:
     show if: users[i].children_entered_separately
     default: |
       ${ showifdef("users[0].children_entered_separately_explanation") if i > 0 else '' }
-  - Did you travel through Central America (Colombia, Panama, Costa Rica, Nicaragua, Honduras, Guatemala, and Mexico) (Colombia, Panama, Costa Rica, Nicaragua, Honduras, Guatemala, and Mexico) before entering the US?: users[i].traveled_through_central_america
+  - Did you travel through Central America (Venezuela, Colombia, Panama, Costa Rica, Nicaragua, Honduras, Guatemala, and Mexico) before entering the US?: users[i].traveled_through_central_america
     datatype: yesnoradio
     default: |
       ${ showifdef("users[0].traveled_through_central_america") if i > 0 else '' }
-  - Did you travel through other countries besides Colombia, Panama, Costa Rica, Nicaragua, Honduras, Guatemala, and Mexico?: users[i].traveled_through_other_countries
+  - Did you travel through other countries besides Venezuela, Colombia, Panama, Costa Rica, Nicaragua, Honduras, Guatemala, and Mexico?: users[i].traveled_through_other_countries
     datatype: yesnoradio
     default: |
       ${ showifdef("users[0].traveled_through_other_countries") if i > 0 else '' }
@@ -568,7 +575,7 @@ subquestion: |
             <li>Any child born outside of Venezuela: ${ 'Yes' if showifdef("user.has_children_applying_not_born_in_venezuela") else 'No' }</li>
             <li>Children's names and nationalities: ${ showifdef("user.children_outside_of_venezuela") }</li>
             <li>Method of last entry to the US: ${ showifdef("user.method_of_entry") }</li>
-            <li>Accompanied by during US entry: ${ showifdef("user.who_entered_with_user") }</li>
+            <li>Accompanied by during US entry: ${ user.who_entered_with_user.true_values() }</li>
             <li>Children entered the US separately: ${ 'Yes' if showifdef("user.children_entered_separately") else 'No' }</li>
             <li>Details of children's entry to the US: ${ showifdef("user.children_entered_separately_explanation") }</li>
             <li>Had legal status in another country besides Venezuela: ${ 'Yes' if showifdef("user.had_legal_status_outside_venezuela") else 'No' }</li>
