--- a/docassemble/USCISApplications/data/questions/main.yml
+++ b/docassemble/USCISApplications/data/questions/main.yml
@@ -9,10 +9,7 @@ include:
 ---
 default screen parts:
   under: |
-  footer: |
-    [:share-alt-square: Share](${ url_ask([{'undefine': ['al_sharing_type','al_how_share_link']}, 'al_share_form_screen', {'recompute': ['al_did_share_form']}, 'al_share_results']) })
-    [:info-circle: About](${ url_action('about_this_interview') })
-    [:comment-dots: Feedback](${ feedback_link(user_info(), i=feedback_form, github_repo=github_repo_name, github_user=github_user, package_version=package_version_number) } ){:target="_blank"}
+  footer: off
   right: |
 ---
 code: |
