--- a/docassemble/USCISApplications/data/questions/combined_application_questions.yml
+++ b/docassemble/USCISApplications/data/questions/combined_application_questions.yml
@@ -641,7 +641,7 @@ id: type of application
 question: |
   First TPS application for ${users[i].name.full()}?
 fields:
-  - "Is this your first TPS application, or are you re-registering/reapplying for TPS?": users[i].is_first_TPS_application
+  - "Is this your first TPS application, or are you applying to re-register your TPS?": users[i].is_first_TPS_application
     datatype: radio
     choices:
       - First TPS Application
