--- a/docassemble/USCISApplications/data/questions/screeners.yml
+++ b/docassemble/USCISApplications/data/questions/screeners.yml
@@ -271,18 +271,30 @@ fields:
       - Other
     default: |
       ${ showifdef("users[0].proof_of_birthplace") if i > 0 else '' }
+  - Are both of your parents Haitian?: users[i].parents_from_haiti
+    datatype: yesnoradio
+    show if:
+      code: |
+        "haiti" in users[i].country_of_birth.lower()
+  - Is at least one of your parents Haitian by birth?: users[i].one_parent_from_haiti
+    datatype: yesnoradio
+    show if:
+      variable: users[i].parents_from_haiti
+      is: False
+      code: |
+        "haiti" in users[i].country_of_birth.lower()
   - Are both of your parents Venezuelan nationals?: users[i].parents_from_venezuela
     datatype: yesnoradio
     show if:
       code: |
-        not "venezuela" in users[i].country_of_birth.lower()
+        "venezuela" in users[i].country_of_birth.lower()
   - Is at least one of your parents Venezuelan by birth?: users[i].one_parent_from_venezuela
     datatype: yesnoradio
     show if:
       variable: users[i].parents_from_venezuela
       is: False
       code: |
-        not "venezuela" in users[i].country_of_birth.lower()
+        "venezuela" in users[i].country_of_birth.lower()
   - note: |
       We **won't** ask if both parents are Venezuelan nationals because the applicant was born in Venezuela.
     show if:
@@ -294,7 +306,19 @@ fields:
       code: |
         not "venezuela" in users[i].country_of_birth.lower()
     js show if: |
-      val("users[i].parents_from_venezuela") || val("users[i].one_parent_from_venezuela")
+      val("users[i].parents_from_venezuela") || val("users[i].one_parent_from_venezuela") ||
+      val("users[i].parents_from_haiti") || val("users[i].one_parent_from_haiti")
+  - What documents do you have proving your parents' birthplace?: users[i].parent_proof_of_birthplace
+    datatype: checkboxes
+    choices:
+      - Birth certificate
+      - Other
+    none of the above: False
+    show if:
+      users[i].proof_of_parent_birthplace
+  - What other documents prove your parents birthplace?: users[i].parent_proof_other
+    js show if: |
+      val("users[i].parent_proof_of_birthplace['Other']")
   - After leaving your home country, were you in any other country for more than 6 months before arriving to the US?: users[i].in_other_country_longer_than_6_months
     datatype: yesnoradio
     default: |
@@ -657,6 +681,7 @@ fields:
           "choices": [
             {"Military service": "military_service"},
             {"Transit through Central America": "transit_through_ca"},
+            {"Child of Haitian Nationality": "child_haitian_nationality"},
             {"Child of Venezuelan nationals": "child_venezuelan_nationals"},
             {"Smuggling": "smuggling"},
             {"Affidavit of continuous residence": "continuous_residence"}
@@ -680,6 +705,7 @@ fields:
     choices:
       - Military service: military_service
       - Transit through Central America: transit_through_ca
+      - Child of Haitian Nationality: child_haitian_nationality
       - Child of Venezuelan nationals: child_venezuelan_nationals
       - Smuggling: smuggling
       - Affidavit of continuous residence: continuous_residence
